--- a/src/main/frontend/src/app/tasks/tasks.component.html
+++ b/src/main/frontend/src/app/tasks/tasks.component.html
@@ -1,1 +1,23 @@
-<p>tasks works!</p>
+<div class="row">
+    <div class="col-md-2">&nbsp;</div>
+    <div class="col-md-8">
+        <div id="tasksPanel" class="card">
+            <div class="card-header">
+                <h3>My Tasks Ciao</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <app-tasks-add></app-tasks-add>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <app-tasks-list></app-tasks-list>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2">&nbsp;</div>
+</div>
