add & list components structure

--- a/src/main/frontend/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/main/frontend/src/app/tasks/tasks-list/tasks-list.component.html
@@ -1,1 +1,8 @@
-<p>tasks-list works!</p>
+<ul class="list-group">
+    <li class="list-group-item">
+        list 1
+    </li>
+    <li class="list-group-item">
+        list 222
+    </li>
+</ul>
