--- a/src/main/frontend/src/app/tasks/tasks-add/tasks-add.component.html
+++ b/src/main/frontend/src/app/tasks/tasks-add/tasks-add.component.html
@@ -3,5 +3,6 @@
            class="form-control"
            placeholder="Add New Task"
            (keyup.enter)="onTaskAdd($event)"
+           [(ngModel)]="addTaskValue"
     />
 </div>
