--- a/src/main/frontend/src/app/tasks/tasks-add/tasks-add.component.html
+++ b/src/main/frontend/src/app/tasks/tasks-add/tasks-add.component.html
@@ -2,7 +2,7 @@
     <input type="text"
            class="form-control"
            placeholder="Add New Task"
-           (keyup.enter)="onTaskAdd($event)"
+           (keyup.enter)="onTaskAdd()"
            [(ngModel)]="addTaskValue"
     />
 </div>
